--- a/templates/generate_qr_code.html
+++ b/templates/generate_qr_code.html
@@ -1,11 +1,11 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Generator</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/src/output.css' %}">
   </head>
   <body class="bg-gray-100 text-gray-800 min-h-screen flex flex-col">
     
