--- a/templates/qr_result.html
+++ b/templates/qr_result.html
@@ -1,5 +1,4 @@
-<!-- templates/qr_result.html -->
-{% extends "generate_qr_code.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <div class="max-w-xl mx-auto mt-20 text-center bg-white shadow-md rounded-lg p-8">
