--- a/templates/qr_result.html
+++ b/templates/qr_result.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="max-w-xl mx-auto mt-20 text-center bg-white shadow-md rounded-lg p-8">
